# Blackbox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  airgap.db  go.mod  go.sum  main.go  notes.md  original_manifest.json  patched_manifest.json  resume.md  test_sbom.json
.github/workflows/: build.yml
archive/: archive.go  archive_test.go
audit/: audit.go  audit_test.go
color/: color.go
crypto/: crypto.go  crypto_test.go
keys/: release.key  release.key.pub
policy/: policy.go  policy_test.go
src/: color.hpp  main.cpp
src/audit/: lib.cpp  lib.hpp
src/crypto/: lib.cpp  lib.hpp
src/package/: lib.hpp
src/package/Approve/: Approve.cpp
src/package/Create/: Create.cpp
src/package/Sign/: Sign.cpp
src/package/Time/: Time.cpp
src/package/Verify/: Verify.cpp
src/package/Version/: Version.cpp
src/policy/: lib.cpp  lib.hpp
src/sbom/: lib.cpp  lib.hpp
src/store/: lib.cpp  lib.hpp
store/: store.go  store_test.go
test_payload/: install.sh
test_payload/config/: settings.yml
tests/: test_audit.cpp  test_crypto.cpp  test_package.cpp  test_policy.cpp  test_store.cpp  test_version.cpp
